feat(Mqtt client)

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
-# MQTT
-MQTT_HOST=mosquitto
+# MQTT Broker (tu Mosquitto en la nube)
+MQTT_HOST=mosquitto.example.com
 MQTT_PORT=1883
 MQTT_USER=
 MQTT_PASS=
 MQTT_CLIENT_ID=iot-edge-backend-1
 MQTT_TOPIC_PREFIX=sensors/#
 
-# REDIS
-REDIS_URL=redis://:password@redis-host:6379/0
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
+# REDIS (RedisLabs / Redis Cloud)
+REDIS_URL=redis://default:your_redis_password@redis-16138.c345.samerica-east1-1.gce.cloud.redislabs.com:16138/0
+# o si tu URL no trae username: redis://:password@host:port/0
 
-# POSTGRES (Render)
-POSTGRES_URL=postgresql://user:password@host:5432/dbname
+# POSTGRES (Render) - usar exactamente como te da Render
+DATABASE_URL=postgres://user_abc:pass123@dpg-abcd123-a.oregon-postgres.render.com:5432/my_database_name
 
 # RESEND
 RESEND_API_KEY=your_resend_api_key
+RESEND_FROM=alerts@example.com
+RESEND_TO=ops@example.com
 
-# APP CONFIGS
-ALERT_COOLDOWN_SECONDS=300        # 5 minutos por defecto, configurable
-ARCHIVE_THRESHOLD_DAYS=1          # mover datos más antiguos a Postgres
-HISTORIC_BATCH_SIZE=1000
+# APP CONFIG
+ALERT_COOLDOWN_SECONDS=300
+ARCHIVE_THRESHOLD_DAYS=1
+ARCHIVER_RUN_EVERY_MINUTES=60
 LOG_LEVEL=INFO
