--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,41 +1,10 @@
 version: "3.8"
+
 services:
-  mosquitto:
-    image: eclipse-mosquitto:2
-    ports:
-      - "1883:1883"
-      - "9001:9001" # websocket si se necesita
-    volumes:
-      - ./deploy/mosquitto.conf:/mosquitto/config/mosquitto.conf
-
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-    command: ["redis-server", "--appendonly", "yes"]
-
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: sensor_historic
-    ports:
-      - "5432:5432"
-
-  edge-app:
+  edge_app:
     build:
       context: .
       dockerfile: deploy/Dockerfile
-    environment:
-      - MQTT_HOST=mosquitto
-      - REDIS_URL=redis://redis:6379/0
-      - POSTGRES_URL=postgresql://postgres:postgres@postgres:5432/sensor_historic
-      - RESEND_API_KEY=${RESEND_API_KEY}
-    depends_on:
-      - mosquitto
-      - redis
-      - postgres
-    volumes:
-      - ./app:/app
+    env_file: .env
+    network_mode: host
     restart: unless-stopped
