feat(Redis client)

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,21 @@
-# MQTT Broker (tu Mosquitto en la nube)
-MQTT_HOST=mosquitto.example.com
+# Redis Cloud
+REDIS_HOST=redis-16138.c345.samerica-east1-1.gce.cloud.redislabs.com
+REDIS_PORT=16138
+REDIS_USER=default
+REDIS_PASSWORD=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Postgres Render (opcional)
+DATABASE_URL=
+
+# Mode: development / production
+APP_ENV=development
+
+# MQTT
+MQTT_HOST=127.0.0.1
 MQTT_PORT=1883
-MQTT_USER=
-MQTT_PASS=
-MQTT_CLIENT_ID=iot-edge-backend-1
 MQTT_TOPIC_PREFIX=sensors/#
 
-# REDIS (RedisLabs / Redis Cloud)
-REDIS_URL=redis://default:your_redis_password@redis-16138.c345.samerica-east1-1.gce.cloud.redislabs.com:16138/0
-# o si tu URL no trae username: redis://:password@host:port/0
-
-# POSTGRES (Render) - usar exactamente como te da Render
-DATABASE_URL=postgres://user_abc:pass123@dpg-abcd123-a.oregon-postgres.render.com:5432/my_database_name
-
-# RESEND
-RESEND_API_KEY=your_resend_api_key
-RESEND_FROM=alerts@example.com
+# Email alerts
+RESEND_API_KEY=xxxxxxx
+RESEND_FROM=onboarding@resend.dev
 RESEND_TO=ops@example.com
-
-# APP CONFIG
-ALERT_COOLDOWN_SECONDS=300
-ARCHIVE_THRESHOLD_DAYS=1
-ARCHIVER_RUN_EVERY_MINUTES=60
-LOG_LEVEL=INFO
