--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -6,12 +6,21 @@ services:
       context: .
       dockerfile: deploy/Dockerfile
     env_file: .env
-    network_mode: host
+    environment:
+      MQTT_HOST: host.docker.internal
+    volumes:
+      - .:/app
+    network_mode: bridge
     restart: unless-stopped
-  
+
   sensor_simulator:
     build:
       context: .
       dockerfile: deploy/Dockerfile
     command: python scripts/sensor_data_sender.py
-    network_mode: host
+    environment:
+      MQTT_HOST: host.docker.internal
+    volumes:
+      - .:/app
+    network_mode: bridge
+    restart: unless-stopped
