Modificar accesos de Redis
AWS
SAO PAULO

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Redis Cloud
-REDIS_HOST=redis-16138.c345.samerica-east1-1.gce.cloud.redislabs.com
-REDIS_PORT=16138
+REDIS_HOST=redis-11377.crce216.sa-east-1-2.ec2.cloud.redislabs.com:11377
+REDIS_PORT=11377
 REDIS_USER=default
-REDIS_PASSWORD=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+REDIS_PASSWORD=xKCHa2YhblmX7rfZyv6m87wHpPPw9FNI
 
 # Postgres Render (opcional)
 DATABASE_URL=
