--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,9 @@
-version: "3.8"
-
 services:
   edge_app:
     build:
       context: .
       dockerfile: deploy/Dockerfile
     env_file: .env
-    environment:
-      MQTT_HOST: host.docker.internal
-    volumes:
-      - .:/app
-    network_mode: bridge
     restart: unless-stopped
 
   sensor_simulator:
@@ -18,9 +11,5 @@ services:
       context: .
       dockerfile: deploy/Dockerfile
     command: python scripts/sensor_data_sender.py
-    environment:
-      MQTT_HOST: host.docker.internal
-    volumes:
-      - .:/app
-    network_mode: bridge
+    env_file: .env        # ← OBLIGATORIO
     restart: unless-stopped
